@@ -6,7 +6,7 @@ Ruins adds randomly spawns ruins in the world. These ruins are destroyed fragmen
 
 Explore them for loot, adventure, or entertainment, but beware, some still have running defenses from the last player that landed on the planet, with more successful colonies having better defenses. The biters have deactivated these defenses towards themselves, but the turrets won't recognize you...
 
-You have to claim ruins before you can deconstruct them. You can obtain the "Claim ruin" tool with Shift + C or from the shortcut bar. After claiming a ruin, you can deconstruct it as expected.
+You have to claim ruins before you can deconstruct them. The "Claim ruin" tool can be obtained with Shift + C or from the shortcut bar. After claiming a ruin, you can deconstruct it as expected. Additionally, you can hold Shift while using the "Claim ruin" tool to remove all remnants (corpses of structures) in the area.
 
 The ruin defenses can be set to be non-hostile in the mod settings. The spawn rates of ruins are also configurable. Other mods can add their own set of ruins.
 
@@ -16,4 +16,4 @@ Check out the [ruin maker mod](https://github.com/Bilka2/ruin-maker), the [contr
 Want to make your own ruin set?<br>
 Check out the links above, the [ruin set](docs/ruin_sets.md) documentation and [The Ruins Mod - Krastorio2](https://github.com/Bilka2/AbandonedRuins-Krastorio2) as an example mod.
 
-The remote interfaces that this mod provides are described with comments at the end of [control.lua](control.lua#L95).
+The remote interfaces that this mod provides are described with comments at the end of [control.lua](control.lua#L104).
